# cpp_thrift_client_server_naive_example

./: CMakeLists.txt  LoggerClient.cpp  LoggerServer.cpp  LoggerService.thrift  README.md
